Issue #14065: Added cyclic GC support to ET.Element